--- a/src/main/resources/static/web/checkout.html
+++ b/src/main/resources/static/web/checkout.html
@@ -206,7 +206,7 @@
             </div>
         </transition>
         <section v-if="cartProducts.length > 0"
-            class="bg-white relative flex flex-col gap-5 justify-center lg:flex-row w-full ">
+            class="bg-white relative flex flex-col gap-5 justify-center md:flex-row w-full ">
             <div :class="{'h-[87vh]':modal}" class="gap-5 flex flex-col ">
                 <div :class="{'hidden': modal}" v-for="product in cartProducts"
                     class="flex flex-row justify-around items-center w-[800px] h-[350px] border m-5">
